fix cmp and overflow-y

--- a/css/chars.css
+++ b/css/chars.css
@@ -10,8 +10,7 @@ body {
 	list-style: none;
 	padding: 0;
 	max-height: min(calc(100vh - 6em), 278px);
-	height: 512px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	display: grid;
 	grid-gap: 2px;
 }
